[gd_scene load_steps=3 format=3 uid="uid://cch21borkwejm"]

[ext_resource type="Script" path="res://UI/menu.gd" id="1_w4wwh"]
[ext_resource type="PackedScene" uid="uid://d3u4dc7f7krif" path="res://Game/waifa/background.tscn" id="2_0yrpx"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_w4wwh")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" parent="Background" instance=ExtResource("2_0yrpx")]

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 54.0
offset_right = 424.0
offset_bottom = 654.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Start" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 74.0
offset_top = 230.0
offset_right = 299.0
offset_bottom = 308.0
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 74.0
offset_top = 334.0
offset_right = 299.0
offset_bottom = 418.0
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Button" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 74.0
offset_top = 129.0
offset_right = 304.0
offset_bottom = 206.0
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(720, 1280)

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
process_callback = 0

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Buttons/Button" to="." method="_on_button_pressed"]
